<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.pdfsam</groupId>
	<artifactId>pdfsam-parent</artifactId>
	<packaging>pom</packaging>
	<version>5.0.4-SNAPSHOT</version>
	<name>PDFsam</name>
	<description>A free open source desktop application to split and merge pdf documents</description>
	<url>https://pdfsam.org</url>

	<organization>
		<name>Sober Lemur S.a.s. di Vacondio Andrea</name>
	</organization>

	<scm>
		<connection>scm:git:git@github.com:torakiki/pdfsam.git</connection>
		<developerConnection>scm:git:git@github.com:torakiki/pdfsam.git</developerConnection>
		<url>scm:git:git@github.com:torakiki/pdfsam.git</url>
		<tag>HEAD</tag>
	</scm>

	<profiles>
		<profile>
			<activation>
				<property>
					<name>env.CI</name>
					<value>true</value>
				</property>
			</activation>
			<id>no-headless-failing-tests</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<excludedGroups>NoHeadless</excludedGroups>
						</configuration>
					</plugin>
				</plugins>
			</build>
			<dependencies>
				<dependency>
					<groupId>org.testfx</groupId>
					<artifactId>openjfx-monocle</artifactId>
					<scope>test</scope>
				</dependency>
			</dependencies>
		</profile>
		<profile>
			<activation>
				<os>
					<family>Windows</family>
				</os>
			</activation>
			<id>no-windows-failing-tests</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<excludedGroups>org.pdfsam.NoWindows</excludedGroups>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>toolchain</id>
			<activation>
				<jdk>(,19)</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-toolchains-plugin</artifactId>
						<executions>
							<execution>
								<goals>
									<goal>toolchain</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<toolchains>
								<jdk>
									<version>19</version>
								</jdk>
							</toolchains>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>basic-release</id>
			<activation>
				<property>
					<name>release</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-release-plugin</artifactId>
						<configuration>
							<tagNameFormat>v@{project.version}</tagNameFormat>
							<allowTimestampedSnapshots>true</allowTimestampedSnapshots>
							<autoVersionSubmodules>true</autoVersionSubmodules>
							<preparationGoals>clean install</preparationGoals>
							<localCheckout>true</localCheckout>
							<goals>package</goals>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<modules>
		<module>pdfsam-basic</module>
		<module>pdfsam-model</module>
		<module>pdfsam-gui</module>
		<module>pdfsam-i18n</module>
		<module>pdfsam-core</module>
		<module>pdfsam-service</module>
		<module>pdfsam-ui-components</module>
		<module>pdfsam-persistence</module>
		<module>pdfsam-themes</module>
		<module>pdfsam-tools/pdfsam-merge</module>
		<module>pdfsam-tools/pdfsam-simple-split</module>
		<module>pdfsam-tools/pdfsam-split-by-size</module>
		<module>pdfsam-tools/pdfsam-split-by-bookmarks</module>
		<module>pdfsam-tools/pdfsam-alternate-mix</module>
		<module>pdfsam-tools/pdfsam-rotate</module>
		<module>pdfsam-tools/pdfsam-extract</module>
		<module>pdfsam-tools/pdfsam-backpages</module>
		<module>pdfsam-test</module>
		<module>pdfsam-docs</module>
	</modules>

	<developers>
		<developer>
			<id>torakiki</id>
			<name>Andrea Vacondio</name>
			<email>andrea.vacondio@gmail.com</email>
		</developer>
	</developers>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.10.1</version>
					<configuration>
						<release>19</release>
						<!-- remove this once Foreign Function & Memory API is out of preview-->
						<compilerArgs>--enable-preview</compilerArgs>
					</configuration>
					<dependencies>
						<!-- remove this once mvn compiler includes it -->
						<dependency>
							<groupId>org.ow2.asm</groupId>
							<artifactId>asm</artifactId>
							<version>9.4</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.3.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.3.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>3.3.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>3.4.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.2.0</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>exec-maven-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.2.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-antrun-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>3.3.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-toolchains-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.0.0-M7</version>
					<configuration>
						<!-- remove this once Foreign Function & Memory API is out of preview-->
						<argLine>--enable-preview</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>3.0.0-M6</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-gpg-plugin</artifactId>
					<version>3.0.1</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<properties>
		<junit.version>5.9.2</junit.version>
		<junit.pioneer.version>1.9.1</junit.pioneer.version>
		<archunit.version>1.0.1</archunit.version>
		<slf4j.version>2.0.3</slf4j.version>
		<commons.lang.version>3.12.0</commons.lang.version>
		<commons.io.version>2.11.0</commons.io.version>
		<mockito.version>5.0.0</mockito.version>
		<tinylog.version>2.6.0</tinylog.version>
		<hibernate-validator.version>7.0.5.Final</hibernate-validator.version>
		<sejda.version>5.0.0.M6</sejda.version>
		<sejda.commons.version>2.0.0</sejda.commons.version>
		<eventstudio.version>3.0.4</eventstudio.version>
		<injector.version>4.0.0</injector.version>
		<rxjava.version>3.1.6</rxjava.version>
		<ikonli.version>12.3.1</ikonli.version>
		<testfx.version>4.0.16-alpha</testfx.version>
		<jackson.version>2.14.1</jackson.version>
		<bouncycastle.version>1.72</bouncycastle.version>
		<assertj.version>3.24.2</assertj.version>
		<hamcrest.version>2.2</hamcrest.version>
		<javafx.version>19.0.2.1</javafx.version>
		<jakarta-el.version>4.0.2</jakarta-el.version>
		<jakarta.inject.version>2.0.1</jakarta.inject.version>
		<validation.api.version>3.0.2</validation.api.version>
		<awaitility.version>4.2.0</awaitility.version>
		<monocle.version>jdk-12.0.1+2</monocle.version>
		<maven.build.timestamp.format>dd-MMM-yyyy</maven.build.timestamp.format>
		<pdfsam.builddate>${maven.build.timestamp}</pdfsam.builddate>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.javadoc.failOnError>false</maven.javadoc.failOnError>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.fasterxml.jackson</groupId>
				<artifactId>jackson-bom</artifactId>
				<version>${jackson.version}</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
			<dependency>
				<groupId>org.kordamp.ikonli</groupId>
				<artifactId>ikonli-bom</artifactId>
				<version>${ikonli.version}</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
			<dependency>
				<groupId>jakarta.validation</groupId>
				<artifactId>jakarta.validation-api</artifactId>
				<version>${validation.api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.glassfish</groupId>
				<artifactId>jakarta.el</artifactId>
				<version>${jakarta-el.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-validator</artifactId>
				<version>${hibernate-validator.version}</version>
			</dependency>
			<dependency>
				<groupId>de.jensd</groupId>
				<artifactId>fontawesomefx-fontawesome</artifactId>
				<version>${fontawesomefx.fontawesome.version}</version>
			</dependency>
			<dependency>
				<groupId>de.jensd</groupId>
				<artifactId>fontawesomefx-materialdesignfont</artifactId>
				<version>${fontawesomefx.materialdesignfont.version}</version>
			</dependency>
			<dependency>
				<groupId>org.pdfsam</groupId>
				<artifactId>eventstudio</artifactId>
				<version>${eventstudio.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons.io.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${commons.lang.version}</version>
			</dependency>
			<dependency>
				<groupId>org.sejda</groupId>
				<artifactId>sejda-model</artifactId>
				<version>${sejda.version}</version>
			</dependency>
			<dependency>
				<groupId>org.sejda</groupId>
				<artifactId>sejda-conversion</artifactId>
				<version>${sejda.version}</version>
			</dependency>
			<dependency>
				<groupId>org.sejda</groupId>
				<artifactId>sejda-core</artifactId>
				<version>${sejda.version}</version>
			</dependency>
			<dependency>
				<groupId>org.sejda</groupId>
				<artifactId>sejda-sambox</artifactId>
				<version>${sejda.version}</version>
			</dependency>
			<dependency>
				<groupId>org.pdfsam</groupId>
				<artifactId>pdfsam-injector</artifactId>
				<version>${injector.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-controls</artifactId>
				<version>${javafx.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-graphics</artifactId>
				<version>${javafx.version}</version>
			</dependency>
			<dependency>
				<groupId>org.bouncycastle</groupId>
				<artifactId>bcprov-jdk18on</artifactId>
				<version>${bouncycastle.version}</version>
			</dependency>
			<dependency>
				<groupId>org.bouncycastle</groupId>
				<artifactId>bcmail-jdk18on</artifactId>
				<version>${bouncycastle.version}</version>
			</dependency>
			<dependency>
				<groupId>jakarta.inject</groupId>
				<artifactId>jakarta.inject-api</artifactId>
				<version>${jakarta.inject.version}</version>
			</dependency>
			<dependency>
				<groupId>io.reactivex.rxjava3</groupId>
				<artifactId>rxjava</artifactId>
				<version>${rxjava.version}</version>
			</dependency>
			<dependency>
				<groupId>org.tinylog</groupId>
				<artifactId>slf4j-tinylog</artifactId>
				<version>${tinylog.version}</version>
			</dependency>
			<dependency>
				<groupId>org.tinylog</groupId>
				<artifactId>tinylog-impl</artifactId>
				<version>${tinylog.version}</version>
			</dependency>
			<dependency>
				<groupId>org.tinylog</groupId>
				<artifactId>tinylog-api</artifactId>
				<version>${tinylog.version}</version>
			</dependency>
			<!-- TODO remove once released -->
			<dependency>
				<groupId>org.sejda</groupId>
				<artifactId>sejda-io</artifactId>
				<version>4.0.0.M1</version>
			</dependency>
			<!-- /TODO -->
			<!-- test -->
			<dependency>
				<groupId>org.testfx</groupId>
				<artifactId>testfx-core</artifactId>
				<version>${testfx.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.testfx</groupId>
				<artifactId>testfx-junit5</artifactId>
				<version>${testfx.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.testfx</groupId>
				<artifactId>openjfx-monocle</artifactId>
				<version>${monocle.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-swing</artifactId>
				<version>${javafx.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.awaitility</groupId>
				<artifactId>awaitility</artifactId>
				<version>${awaitility.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>${junit.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.sejda</groupId>
			<artifactId>sejda-commons</artifactId>
			<version>${sejda.commons.version}</version>
		</dependency>
		<!-- test depts -->
		<dependency>
			<groupId>org.sejda</groupId>
			<artifactId>sejda-tests</artifactId>
			<version>${sejda.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>${mockito.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>${assertj.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-core</artifactId>
			<version>${hamcrest.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit-pioneer</groupId>
			<artifactId>junit-pioneer</artifactId>
			<version>${junit.pioneer.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.tngtech.archunit</groupId>
			<artifactId>archunit-junit5</artifactId>
			<version>${archunit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.tinylog</groupId>
			<artifactId>slf4j-tinylog</artifactId>
			<version>${tinylog.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.tinylog</groupId>
			<artifactId>tinylog-impl</artifactId>
			<version>${tinylog.version}</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>animal-sniffer-annotations</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>
</project>
